proxy/gateway/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: middleware-gateway
  namespace: istio-study
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 3306
        name: mysql-middleware
        protocol: TCP
      hosts:
        - "*"
    - port:
        number: 6379
        name: redis-middleware
        protocol: TCP
      hosts:
        - "*"

---
apiVersion: v1
kind: Service
metadata:
  name: middleware-gateway-mysql-svc
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
    app: istio-ingressgateway
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql-middleware
---
apiVersion: v1
kind: Service
metadata:
  name: middleware-gateway-redis-svc
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
    app: istio-ingressgateway
  ports:
    - port: 6379
      targetPort: 6379
      name: redis-middleware
