proxy/gateway/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: middleware-virtualservice
  namespace: istio-study
spec:
  hosts:
    - "*"
  gateways:
    - middleware-gateway
  tcp:
    - match:
        - port: 3306
      route:
        - destination:
            host: middleware-mysql.istio-study.svc.cluster.local
            port:
              number: 3306
          weight: 100
    - match:
        - port: 6379
      route:
        - destination:
            host: middleware-redis.istio-study.svc.cluster.local
            port:
              number: 6379
          weight: 100
